# shell-executor

./: .gitignore  CONTEXT.md  Cargo.toml  README.md  check-similarity.sh  clippy.toml  deny.toml  dist-workspace.toml  similarity.toml
.github/workflows/: ci.yml
crates/shell-executor/: Cargo.toml
crates/shell-executor/examples/: demo.rs
crates/shell-executor/src/: interactive.rs  lib.rs  outcome.rs  parallel.rs  tui.rs
crates/shell-executor/tests/: cli_exit_code.rs  cli_interactive.rs  cli_log.rs  cli_msg.rs  cli_output_shape.rs  cli_parallel.rs  cli_quiet.rs  cli_succinct_verbose.rs  cli_time.rs  cli_validator.rs  integration.rs
crates/shell-executor/tests/common/: mod.rs
