[package]
name = "shell-executor"
version = "0.5.0"
edition = "2021"
repository = "https://github.com/Artemis-Cooperative/shell-executor"

[[bin]]
name = "x"
path = "src/bin/x.rs"

[dependencies]
chrono = "0.4"
clap = { version = "4", features = ["derive"] }
portable-pty = "0.9"
crossterm = "0.29"
ratatui = "0.30"
vt100 = "0.16"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
